--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,7 +69,7 @@
 
         </LinearLayout>
 
-            <LinearLayout
+           <!-- <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_gravity="bottom"
@@ -113,7 +113,7 @@
                     </LinearLayout>
                 </LinearLayout>
                 </RelativeLayout>
-            </LinearLayout>
+            </LinearLayout>-->
 
         </LinearLayout>
         </androidx.cardview.widget.CardView>
